# Equator

./: .coveragerc  .gitignore  README.md  __init__.py  consts.py  equator.py  evaluate.py  main.py  operation.py  parse.py  requirements.txt  requirements_windows.txt  segment.py  setup.cfg  setup.py  solve.py  tokens.py
.github/workflows/: python-app.yml
display/: colours.py  display_exp.py  input_container.py  main_curses.py  output_container.py
eq_curses/: __init__.py  curses_main.py  display_exp.py  main_curses.py  output_container.py
eq_json/: __init__.py  json_main.py
equator/: __init__.py  __main__.py  equator.py
equator/eq_curses/: __init__.py  curses_main.py  display_exp.py  output_container.py
equator/eq_json/: __init__.py  example.json  json_main.py  jsonify.py
equator/lib/: __init__.py  argset.py  consts.py  eq_except.py  eq_object.py  eval_options.py  expression.py  operation.py  parsedinput.py  segment.py  subexpression.py  tokens.py
equator/lib/functions/: __init__.py  basic_functions.py  calculus_functions.py  detect_function.py  function.py  function_helpers.py  lcm_gcd_functions.py  negate_function.py  rad_deg_functions.py  series_functions.py  unary_function.py
lib/: __init__.py  consts.py  eq_except.py  eq_object.py  evaluate.py  expression.py  main.py  operation.py  output_formatter.py  output_formatters.py  parse.py  parsedinput.py  segment.py  smart_equate.py  solve.py  subexpression.py  sym.py  tokens.py
tests/: helpers.py  test_basic.py  test_comma_operator.py  test_constants.py  test_equation.py  test_exponent_notation.py  test_expression_object.py  test_fractions.py  test_functions.py  test_input_preservation.py  test_invalid_input.py  test_leading_negative.py  test_mixed_input.py  test_operator.py  test_order_of_operations.py  test_output_formatters.py  test_smart_representation.py  test_symbols.py
tests/test_functions/: __init__.py  test_calculus_functions.py  test_degs_rads.py  test_functions.py  test_lcm_gcd_functions.py  test_log_functions.py  test_series_functions.py  test_simple_functions.py  test_trig_functions.py
