[metadata]
name = equatorpy
version = 1.1.0.2
author = Miguel Guthridge
author_email = hdsq@outlook.com.au
description = An advanced symbolic calculator and maths interpreter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MiguelGuthridge/Equator
project_urls =
    Bug Tracker = https://github.com/MiguelGuthridge/Equator/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Console :: Curses
keywords = 
    equator
    calculator
    symbolic
    math
    equation
    sympy
    json
    cli

[options]
packages = find:
install_requires =
    sympy
    colorama
    windows-curses >= 2.2.0;platform_system=='Windows'
python_requires = >=3.6

[options.packages.find]
where = .
include = 
    equator
    equator.*
exclude = 
    tests
